--- a/src/articles/content/1.md
+++ b/src/articles/content/1.md
@@ -1,5 +1,7 @@
 ---
-title: Article 1
+title: Hello world !
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi maxime nulla odit similique veritatis voluptatem. Ipsam laborum porro provident quidem voluptas? Architecto blanditiis cum, doloremque expedita impedit nisi numquam odio odit officia, pariatur quas qui quidem quo ullam voluptatem. Adipisci architecto assumenda consectetur eveniet explicabo harum labore laboriosam nihil numquam, perspiciatis placeat quasi reiciendis reprehenderit tempore voluptate. Ab alias aperiam asperiores aspernatur at autem commodi consequuntur culpa doloremque dolorum eligendi eos error esse illo ipsam itaque, laboriosam magnam necessitatibus neque nobis, numquam odio placeat provident quaerat repellat reprehenderit suscipit voluptatem? Accusamus adipisci alias culpa enim error, ex facere harum impedit maiores modi mollitia nisi quia quo reprehenderit sunt, totam vitae!
+Depuis que nous le souhaitions, nous avons enfin un système de news en place ! Nous allons pouvoir vous annoncer les dernières infos du premier Touraine Tech ici, à commencer par la présentation de notre premier sponsor gold, le [groupe Apside](./news.html#Présentation de notre premier sponsor gold, le groupe Apside).
+
+Stay tuned, encore plus de choses à venir !
