CSS section et pages actus

--- a/src/articles/content/1.md
+++ b/src/articles/content/1.md
@@ -2,6 +2,6 @@
 title: Hello world !
 ---
 
-Depuis que nous le souhaitions, nous avons enfin un système de news en place ! Nous allons pouvoir vous annoncer les dernières infos du premier Touraine Tech ici, à commencer par la présentation de notre premier sponsor gold, le groupe Apside.
+![logo tnt](../../../img/logo_tnt.png)
 
-Stay tuned, encore plus de choses à venir !
+Depuis que nous le souhaitions, nous avons enfin un système de news en place ! Nous allons pouvoir vous annoncer les dernières infos du premier Touraine Tech ici, à commencer par la présentation de notre premier sponsor gold, le groupe Apside. Stay tuned, encore plus de choses à venir !
