Fix dates in articles meta data

--- a/src/articles/content/1.md
+++ b/src/articles/content/1.md
@@ -1,5 +1,7 @@
 ---
 title: Hello world !
+creationDate: 2018-02-05T09
+modificationDate: 2018-02-05T09
 ---
 
 ![logo tnt](../../../img/logo_tnt.png)
